force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/CPQ_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CPQ_External_ID__c</fullName>
    <displayFormat>CPQACONID{YYYY}{MM}{DD}-{0}</displayFormat>
    <externalId>true</externalId>
    <label>CPQ External ID</label>
    <type>AutoNumber</type>
</CustomField>