force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/sbaa__FilterField__c.field-meta.xml
<CustomField>
    <fullName>sbaa__FilterField__c</fullName>
    <description>Field to evaluate the the Tested Field/Variable against</description>
    <inlineHelpText>Field to evaluate the the Tested Field/Variable against</inlineHelpText>
    <label>Filter Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>License_Term__c</fullName>
            </value>
            <value>
                <fullName>Blended_Discount__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>