force-app/main/default/objects/sbaa__ApprovalCondition__c/fields/sbaa__Operator__c.field-meta.xml
<CustomField>
    <fullName>sbaa__Operator__c</fullName>
    <description>Operator used for the evaluation</description>
    <inlineHelpText>Operator used for the evaluation</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less or equals</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater or equals</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>ends with</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>does not contain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>